stop image from overflowing in modal

--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,7 @@ p {
     line-height: 1.5;
 }
 
-img {
-    /* width: 100%; */
-}
+
 
 .container {
     max-width: 1200px;
@@ -83,9 +81,9 @@ h3 {
 }
 
 .modal-div img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .modal-div button {
